using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class Animations
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
}
